hphp/test/quick/fpush_fatal.php.expectf

Fatal error: Call to undefined function asdasdasd() in %s on line 6
